@@ -1,13 +1,12 @@
 package demo;
 
 import org.springframework.util.StringUtils;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 import javax.crypto.Cipher;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
 import java.security.spec.AlgorithmParameterSpec;
+import java.util.Base64;
 
 /**
  *
@@ -82,7 +81,7 @@ public class EncodeUtil {
      * @return 编码后的base 64 code
      */
     public static String base64Encode(byte[] bytes) {
-        return new BASE64Encoder().encode(bytes);
+        return Base64.getEncoder().encodeToString(bytes);
     }
 
     /**
@@ -93,7 +92,8 @@ public class EncodeUtil {
      * @throws Exception
      */
     public static byte[] base64Decode(String base64Code) throws Exception {
-        return StringUtils.isEmpty(base64Code) ? null : new BASE64Decoder().decodeBuffer(base64Code);
+
+        return StringUtils.isEmpty(base64Code) ? null : Base64.getDecoder().decode(base64Code);
     }
 
     /**
